Cards word and fixed spacing issue

--- a/app/assets/stylesheets/cards.css
+++ b/app/assets/stylesheets/cards.css
@@ -52,7 +52,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  padding-right: 40%;
+  /* padding-right: 40%; */
 }
 
 .study-set {
